# owarai-grillmaster

./: .gitignore  AGENTS.md  README.md  main.py  project.py  pyproject.toml  settings.py  workflow.py
scripts/: grill.bat
services/: media.py  package.py  progress.py
services/agent_exec/: __init__.py  base.py  claude_sdk.py  codex.py
services/chunk_fix/: __init__.py  fix.py  validate_chunk.py  validation.py
services/elevenlabs/: srt_builder.py
services/finalize/: finalize.py  subtitles.py
services/fixed_glossary/: fixed_glossary.json  fixed_glossary.md
services/gemini/: assets.py  chunk_worker.py  cli.py  errors.py  fixed_glossary.json  gemini.py  instructions.py  pre_pass.py
services/inference/: __init__.py  base.py  claude_sdk.py  codex.py  gemini_agy.py  gemini_api.py  gemini_cli.py  result.py  schema_enforce.py
services/package/: constants.py  core.py  noise.py  remix.py
services/postprocess/: __init__.py  _srt_guard.py  cover.py  glossary_check.py  refine.py
services/translate/: __init__.py  assets.py  chunker.py  errors.py  facade.py  request.py
tests/: test_agent_frame_tool.py  test_chunk_fix.py  test_chunk_validation.py  test_elevenlabs_asr.py  test_elevenlabs_srt_builder.py  test_finalize_subtitles.py  test_gemini_agy.py  test_gemini_assets.py  test_gemini_cli_prepass.py  test_gemini_inline_media.py  test_gemini_normalizer.py  test_glossary_check.py  test_inference.py  test_package.py  test_progress_integration.py  test_project.py  test_settings_model_spec.py  test_translate_prompts.py  test_workflow_breakpoints.py  test_workflow_costs.py
(+34 files in other folders)
