[project]
name = "bangumi-grillmaster"
version = "0.1.0"
description = "japanese tv show transcription"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.24.0",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.60.0",
    "loguru>=0.7.3",
    "openai>=2.24.0",
    "pycryptodomex>=3.23.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.1",
    "typer>=0.21.1",
    "yt-dlp>=2026.1.29",
]
