[project]
name = "owarai-grillmaster"
version = "0.1.0"
description = "Japanese variety show transcription"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.2.104",
    "elevenlabs>=2.24.0",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.60.0",
    "loguru>=0.7.3",
    "pycryptodomex>=3.23.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
    "rich>=14.3.1",
    "typer>=0.21.1",
    "yt-dlp>=2026.1.29",
]
